test/parser.d/invalid/statements3.souc.bad
main() = do
	x <- 4
	print x++
